# ayatana-indicator-messages

./: .build.yml  .bzrignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  Makefile.am  Makefile.am.coverage  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  configure  configure.ac  update-po.sh  update-pot.sh
.pc/: applied-patches
.pc/tell-accounts-service.patch/src/: messages-service-dbus.c
common/: Makefile.am  com.canonical.indicator.messages.application.xml  org.ayatana.indicator.messages.application.xml  org.ayatana.indicator.messages.service.xml
data/: CMakeLists.txt  Makefile.am  Makefile.in  ayatana-indicator-messages.conf.in  ayatana-indicator-messages.desktop.in  ayatana-indicator-messages.service.in  com.canonical.indicator.messages  indicator-messages.desktop.in  indicator-messages.service.in  org.ayatana.indicator.messages  org.ayatana.indicator.messages.gschema.xml
data/icons/: Makefile.in
data/icons/16x16/: Makefile.in
data/icons/16x16/categories/: Makefile.in
data/icons/16x16/status/: Makefile.am  Makefile.in
data/icons/22x22/: Makefile.in
data/icons/22x22/categories/: Makefile.in
data/icons/22x22/status/: Makefile.am  Makefile.in
data/icons/24x24/: Makefile.in
data/icons/24x24/status/: Makefile.am  Makefile.in
data/icons/32x32/: Makefile.in
data/icons/32x32/categories/: Makefile.in
data/icons/32x32/status/: Makefile.am  Makefile.in
data/icons/48x48/: Makefile.in
data/icons/48x48/status/: Makefile.am  Makefile.in
data/icons/scalable/: Makefile.in
data/icons/scalable/categories/: Makefile.in
data/icons/scalable/status/: Makefile.am  Makefile.in
debian/: ayatana-indicator-messages.install  ayatana-indicator-messages.links  changelog  control  copyright  indicator-messages.install  indicator-status-provider-emesene.install  indicator-status-provider-mc5.install  indicator-status-provider-pidgin.install  indicator-status-provider-telepathy.install  libayatana-messaging-menu-dev.examples  libayatana-messaging-menu0.symbols  libindicator-messages-status-provider-dev.install  libindicator-messages-status-provider1.install  libmessaging-menu-dev.install  libmessaging-menu0.symbols  rules  watch
debian/patches/: lp_690668.patch  series  tell-accounts-service.patch
doc/: Makefile.in
doc/reference/: CMakeLists.txt  Makefile.am  Makefile.in  messaging-menu-docs.xml  messaging-menu-docs.xml.in  messaging-menu-sections.txt  messaging-menu.types
doc/reference/html/: MessagingMenuApp.html  annotation-glossary.html  api-index-full.html  ch01.html  index.html  index.sgml  messaging-menu.devhelp2  object-tree.html
libmessaging-menu/: CMakeLists.txt  Makefile.am  Makefile.in  client-example.py  gtupleaction.c  gtupleaction.h  indicator-messages-service.c  indicator-messages-service.h  messaging-menu-app.c  messaging-menu-app.h  messaging-menu-message.c  messaging-menu-message.h  messaging-menu.c  messaging-menu.h  messaging-menu.pc.in  messaging-menu.symbols
po/: CMakeLists.txt  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-indicator-messages.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  (+98 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  accounts-service.c  accounts-service.h  app-gtk-menu-item.c  app-gtk-menu-item.h  app-menu-item.c  app-menu-item.h  app-section.c  app-section.h  dbus-data.h  default-applications.c  default-applications.h  dirs.h  gactionmuxer.c  gactionmuxer.h  gen-messages-service.xml.c  gmenuutils.c  gmenuutils.h  ido-detail-label.c  ido-menu-item.c  ido-menu-item.h  im-accounts-service.c  im-accounts-service.h  im-app-menu-item.c  im-app-menu-item.h  im-application-list.c  im-application-list.h  im-desktop-menu.c  im-menu-item.c  im-menu-item.h  im-menu.c  im-menu.h  im-phone-menu.c  im-phone-menu.h  im-source-menu-item.c  im-source-menu-item.h  indicator-desktop-shortcuts.c  indicator-messages-service.c  (+27 more)
test/: Makefile.am  Makefile.in  indicator-messages-service-activate.c  test-client.py  test-gactionmuxer.cpp  test-gtest.cpp
tests/: CMakeLists.txt  Makefile.am  accounts-service-mock.h  indicator-fixture.h  indicator-test.cpp  manual  test-client.py  test-gactionmuxer.cpp
tests/applications/: test.desktop
